fix: support lumen 8

--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
     ],
     "require": {
         "php": ">=7.1.0,<7.5.0",
-        "illuminate/contracts": "^5.1|^6.0|^7.0",
-        "illuminate/http": "^5.1|^6.0|^7.0",
-        "illuminate/routing": "^5.1|^6.0|^7.0",
-        "illuminate/support": "^5.1|^6.0|^7.0",
-        "illuminate/view": "^5.1|^6.0|^7.0",
+        "illuminate/contracts": "^5.1|^6.0|^7.0|^8.0",
+        "illuminate/http": "^5.1|^6.0|^7.0|^8.0",
+        "illuminate/routing": "^5.1|^6.0|^7.0|^8.0",
+        "illuminate/support": "^5.1|^6.0|^7.0|^8.0",
+        "illuminate/view": "^5.1|^6.0|^7.0|^8.0",
         "ramsey/uuid": "^3.0",
         "psr/log": "^1.0",
         "scoutapp/scout-apm-php": "^4.2"
