--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "illuminate/routing": "^5.1|^6.0|^7.0|^8.0",
         "illuminate/support": "^5.1|^6.0|^7.0|^8.0",
         "illuminate/view": "^5.1|^6.0|^7.0|^8.0",
-        "ramsey/uuid": "^3.0",
+        "ramsey/uuid": "^3.0|^4.1.1",
         "psr/log": "^1.0",
         "scoutapp/scout-apm-php": "^4.2"
     },
